--- a/styles/components/khyle.css
+++ b/styles/components/khyle.css
@@ -75,3 +75,13 @@
     justify-content: center;
     align-items: center;
   }
+
+  .activities__content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    padding: 1rem; 
+    border-radius: 8px; 
+  }
