--- a/styles/components/khyle.css
+++ b/styles/components/khyle.css
@@ -78,10 +78,10 @@
 
   .activities__content {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    background-color: white; 
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    background-color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    gap: 1rem;
     padding: 1rem; 
-    border-radius: 8px; 
   }
